add feature not implemented alert

--- a/source/index.html
+++ b/source/index.html
@@ -3,6 +3,11 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
+    <script>
+    function notImplemented(){
+      alert("Sorry, this feature not implemented yet!");
+    }
+</script>
     <title>star-admin</title>
   </head>
   <body>
